# EmoFALCO

./: .gitignore  README.md  anonymize.py  config.yaml  download_models.py  extract_features.py  fake_data_cleanup.py  generate_fake_data.py  invert.py  pair_nn.py  pyproject.toml  resize_images.py  visualise_landmarks.py
lib/: __init__.py  aux.py  celebahq.py  config.py  evaluation.py  id_loss.py  landmark_loss.py  latent_code.py
lib/fan_model/: utils.py
models/: load_generator.py
